--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     }
     section{
         display: flex;
+        margin-bottom: 100px;
     }
     .half-width{
         width: 50%;
@@ -41,4 +42,10 @@ body{
     background-repeat: no-repeat;
 
 
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    
 }
